@@ -1,0 +1,5 @@
+SRC += 	arch/$(ARCH)/compare_and_exchange.c \
+	arch/$(ARCH)/set.c \
+	arch/$(ARCH)/increment.c \
+	arch/$(ARCH)/decrement.c
+
